# sonar

./: .gitignore  .mcp.json  CONTRIBUTING.md  FEATURES.md  INSTALLATION.md  MCP.md  README.md  TROUBLESHOOTING.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/scripts/: bump-version.sh  gen-notes.sh  update-readme.py
.github/workflows/: release.yml
docs/: index.html  package-lock.json  package.json  vercel.json
docs/content/: address-bar.md  contributing.md  devtools.md  installation.md  mcp.md  port-filter.md  troubleshooting.md
docs/public/: robots.txt  sitemap.xml
docs/src/: App.tsx  docs.ts  index.css
landing/: index.html  package-lock.json  package.json  robots.txt  vite.config.ts
landing/public/: sitemap.xml
landing/src/: App.tsx  index.css
pkg/: build.sh
pkg/macos/: Sonar.icns
src/: App.css  App.tsx  main.tsx  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/sonar_macos.icon/: icon.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/go/: build.sh  go.mod
src-tauri/src/go/cmd/mcp-server/: main.go  tools.go
src-tauri/src/go/cmd/port-scanner/: analyze.go  databases.go  kill_unix.go  kill_windows.go  main.go
src-tauri/src/go/internal/scanner/: scanner.go
src-tauri/src/port-scanner/: build.sh  go.mod  main.go  scanner.go
src/components/: AIIntegrations.tsx  AnalysisPanel.tsx  BrowserArea.tsx  DevToolsMenu.tsx  LogsDrawer.tsx  NewTabPage.tsx  PortCard.tsx  PortContextMenu.tsx  PortDetailsModal.tsx  Sidebar.tsx  TerminalTab.tsx  TopBar.tsx
(+11 files in other folders)
