[package]
name = "sonar"
version = "1.0.0"
description = "Sonar - Network Scanner"
authors = ["Aiyan Chowdhury"]
edition = "2021"
rust-version = "1.77.2"
default-run = "sonar"

[lib]
name = "sonar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
portable-pty = { version = "0.8", default-features = false }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
